@@ -18,8 +18,12 @@
 package de.tudarmstadt.ukp.inception.externaleditor.xhtml;
 
 import static java.lang.invoke.MethodHandles.lookup;
+import static java.util.Optional.ofNullable;
 import static org.slf4j.LoggerFactory.getLogger;
 import static org.springframework.http.HttpStatus.OK;
+import static org.springframework.http.MediaType.IMAGE_GIF;
+import static org.springframework.http.MediaType.IMAGE_JPEG;
+import static org.springframework.http.MediaType.IMAGE_PNG;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
@@ -27,10 +31,10 @@ import java.io.StringWriter;
 import java.security.Principal;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.xml.XMLConstants;
 
+import org.apache.commons.lang3.StringUtils;
 import org.apache.uima.cas.CAS;
 import org.dkpro.core.api.xml.type.XmlDocument;
 import org.dkpro.core.api.xml.type.XmlElement;
@@ -71,6 +75,8 @@ public class XHtmlXmlDocumentViewControllerImpl
     extends XmlDocumentViewControllerImplBase
     implements XHtmlXmlDocumentViewController
 {
+    private static final MediaType IMAGE_SVG = MediaType.parseMediaType("image/svg+xml");
+
     private static final Logger LOG = getLogger(lookup().lookupClass());
 
     private static final String GET_DOCUMENT_PATH = "/p/{projectId}/d/{documentId}/xml";
@@ -216,9 +222,8 @@ public class XHtmlXmlDocumentViewControllerImpl
     private void renderHead(SourceDocument doc, ContentHandler ch) throws SAXException
     {
         ch.startElement(null, null, HEAD, null);
-        for (String cssUrl : formatRegistry.getFormatCssStylesheets(doc).stream()
-                .map(css -> ServletContextUtils.referenceToUrl(servletContext, css))
-                .collect(Collectors.toList())) {
+        for (var cssUrl : formatRegistry.getFormatCssStylesheets(doc).stream()
+                .map(css -> ServletContextUtils.referenceToUrl(servletContext, css)).toList()) {
             renderXmlStylesheet(ch, cssUrl);
         }
         ch.endElement(null, null, HEAD);
@@ -284,6 +289,9 @@ public class XHtmlXmlDocumentViewControllerImpl
         try {
             var inputStream = formatSupport.openResourceStream(srcDocFile, aResourceId);
             var httpHeaders = new HttpHeaders();
+
+            getContentType(aResourceId).ifPresent(httpHeaders::setContentType);
+
             return new ResponseEntity<>(new InputStreamResource(inputStream), httpHeaders, OK);
         }
         catch (FileNotFoundException e) {
@@ -294,6 +302,24 @@ public class XHtmlXmlDocumentViewControllerImpl
             LOG.debug("Unable to load resource [{}] for document {}", aResourceId, srcDoc, e);
             return ResponseEntity.notFound().build();
         }
+    }
+
+    private Optional<MediaType> getContentType(String aResourceId)
+    {
+        var suffix = StringUtils.substringAfterLast(aResourceId, ".");
+
+        if (suffix == null) {
+            return Optional.empty();
+        }
+
+        return ofNullable(switch (suffix) {
+        case "svg" -> IMAGE_SVG;
+        case "png" -> IMAGE_PNG;
+        case "gif" -> IMAGE_GIF;
+        case "jpg" -> IMAGE_JPEG;
+        case "jpeg" -> IMAGE_JPEG;
+        default -> null;
+        });
     }
 
     private ResponseEntity<String> toResponse(StringWriter aOut)
